[gd_scene load_steps=7 format=3 uid="uid://c03h45ggehvp5"]

[ext_resource type="Script" path="res://scripts/torret_1.gd" id="1_h7ilt"]
[ext_resource type="Resource" uid="uid://rdohsd3c4d5w" path="res://resources/YellowDuck.tres" id="2_jyth8"]
[ext_resource type="Texture2D" uid="uid://b0wks8ce5q57q" path="res://sprites/1000074685.png" id="3_3fkh7"]
[ext_resource type="PackedScene" uid="uid://daabpjdihowwe" path="res://scenes/torret/egg.tscn" id="4_r13t0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qbhvu"]
size = Vector2(43, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rafnj"]
size = Vector2(15, 104)

[node name="Torret1" type="StaticBody2D"]
z_index = 1
script = ExtResource("1_h7ilt")
data = ExtResource("2_jyth8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(203.5, 28.5)
shape = SubResource("RectangleShape2D_qbhvu")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(234.5, 29)
shape = SubResource("RectangleShape2D_rafnj")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(230, -30)

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(150, 9)
texture = ExtResource("3_3fkh7")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(1340, -3)
collision_mask = 2

[node name="Timer" type="Timer" parent="."]

[node name="Egg" parent="." instance=ExtResource("4_r13t0")]
position = Vector2(153, 2)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="cracked" from="Egg" to="." method="_on_egg_cracked"]
